<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_game_over1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dancingscript"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/game_over"
        android:textColor="@color/textFontColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_new_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dancingscript"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/new_high_score"
        android:textColor="@color/textFontColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_game_over1" />

    <Button
        android:id="@+id/btnTryAgain1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:background="@color/btnBackgroundColor"
        android:fontFamily="@font/dancingscript"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btnGoToHome1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_player_name"
        tools:elevation="2dp"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="96dp"
        android:background="@color/btnBackgroundColor"
        android:fontFamily="@font/dancingscript"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:elevation="2dp"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/btnGoToHome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="2px"
        android:background="@color/btnBackgroundColor"
        android:fontFamily="@font/dancingscript"
        android:text="@string/go_to_home"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave"
        tools:elevation="2dp"
        tools:textAllCaps="false" />

    <EditText
        android:id="@+id/txt_player_name"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/user"
        android:ems="10"
        android:fontFamily="@font/dancingscript"
        android:gravity="center_vertical"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingBottom="10dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textFontColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_new_high_score" />

</android.support.constraint.ConstraintLayout>