<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cwl.barrelrace.barrelracegame.view.Instructions"
    tools:showIn="@layout/activity_instructions">

    <TextView
        android:id="@+id/info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dancingscript"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/how_to_play"
        android:textColor="@color/textFontColor"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_instruction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/chip_drawable"
        android:elevation="2dp"
        android:fontFamily="@font/dancingscript"
        android:padding="10dp"
        android:text="@string/instruction1"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_title" />

    <TextView
        android:id="@+id/txt_instruction2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/chip_drawable"
        android:elevation="2dp"
        android:fontFamily="@font/dancingscript"
        android:padding="10dp"
        android:text="@string/instruction2"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_instruction1" />

    <TextView
        android:id="@+id/txt_instruction3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/chip_drawable"
        android:elevation="2dp"
        android:fontFamily="@font/dancingscript"
        android:padding="10dp"
        android:text="@string/instruction3"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_instruction2" />
</android.support.constraint.ConstraintLayout>
