<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dancingscript"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/game_over"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="80dp"
        android:background="@color/btnBackgroundColor"
        android:fontFamily="@font/dancingscript"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:elevation="2dp"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/btnGoToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:background="@color/btnBackgroundColor"
        android:fontFamily="@font/dancingscript"
        android:text="@string/go_to_home"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnTryAgain"
        app:layout_constraintTop_toTopOf="parent"
        tools:elevation="2dp"
        tools:textAllCaps="false" />
</android.support.constraint.ConstraintLayout>