<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cwl.barrelrace.barrelracegame.view.Home"
    tools:showIn="@layout/activity_home">

    <TextView
        android:id="@+id/txtGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPlayGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/btnBackgroundColor"
        android:text="@string/play_game"
        android:textColor="@color/textColor"
        android:textAllCaps="false"
        android:fontFamily="@font/dancingscript"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBarrelRace"
        tools:elevation="2dp"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/btnHighScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dancingscript"
        android:text="@string/high_scores"
        android:background="@color/btnBackgroundColor"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlayGame"
        tools:background="@color/btnBackgroundColor"
        tools:elevation="2dp"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dancingscript"
        android:text="@string/action_settings"
        android:background="@color/btnBackgroundColor"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHighScores"
        app:layout_constraintVertical_bias="0.0"
        tools:background="@color/btnBackgroundColor"
        tools:elevation="2dp"
        tools:textAllCaps="false" />

    <ImageView
        android:id="@+id/imgBarrelRace"
        android:layout_width="363dp"
        android:layout_height="254dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGameTitle"
        app:srcCompat="@drawable/barrel_race" />
</android.support.constraint.ConstraintLayout>
